# Polumenta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  readme.md  setup.py  setyp.py  tox.ini
pylumenta/: __init__.py  generator.py
src/: polumenta.py
test/: test_Polumenta.py
