[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pylumenta"
author = "Vladimir Lojanica"
author-email = "vladimirlojanica@gmail.com"
home-page = "https://github.com/vladimirlojanica/pylumenta"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "readme.md"

