[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pylumenta"
author = "Vladimir Lojanica"
author-email = "vladimirlojanica@gmail.com"
home-page = "https://github.com/vladimirlojanica/pylumenta"
requires-python = ">=3.7"
classifiers = [ 
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	]
description-file = "readme.md"

[tool.black]
line-length = 100